app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tls-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tls-app
  template:
    metadata:
      labels:
        app: tls-app
    spec:
      containers:
      - name: tls-app
        image: ankitdevops02/my-first-app:v1
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: tls-app-service
spec:
  selector:
    app: tls-app
  ports:
  - port: 80
    targetPort: 3000
